welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:16: error: not found: value a
			a(j) = i;
                        ^